<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReversiGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="playOnline">Play Online</string>
    <string name="playVsComputer">Play Vs Computer</string>
    <string name="instructions">How To Play !?</string>
    <string name="exit">Exit</string>
    <string name="loadgame">Load</string>
    <string name="sttings">Settings</string>
    <string name="title_activity_name">Enter Your Name</string>
    <string name="submitName">Submit</string>
    <string name="title_activity_name_for_local">NameForLocal</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_how_to_play">HowToPlay</string>
    <string name="gameIns">Welcome to REVERSI game </string>
    <string name="color">Set Color</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="title_activity_offline_board">OfflineBoard</string>
    <string name="playerName">P1</string>
    <string name="score">Score</string>
    <string name="player2">p2</string>
    <string name="com">Computer</string>
    <string name="time">Timer</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="test">Null</string>
    <string name="title_activity_board">Board</string>
    <string name="title_activity_local_board">LocalBoard</string>
    <string name="title_activity_winner">Winner</string>

</resources>
