<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OfflineBoard" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="16dp"
        android:text="@string/playerName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/player2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/com" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textView5"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textView2"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/textView4"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="36dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton13"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton14"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton15"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton16"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton17"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton18"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton19"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton20"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton21"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton22"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton23"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton24"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton25"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton26"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton27"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton28"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton29"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton30"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton31"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton32"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton33"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton34"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton35"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton36"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton37"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton38"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton39"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton40"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton41"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton42"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton43"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton44"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton45"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton46"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton47"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton48"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton49"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton50"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton51"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton52"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton53"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton54"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton55"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton56"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton57"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton58"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton59"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton60"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton61"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton62"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />

            <ImageButton
                android:id="@+id/imageButton63"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell2" />

            <ImageButton
                android:id="@+id/imageButton64"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/cell1" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>